import from mozilla upstream: - Bumping gaia.json for 1 gaia revision(s) a=gaia-bump (fe22e9f6cd7) - Bumping manifests a=b2g-bump (1579648a936) - Bug 962977 - Unable to remove WAP push/SMS message from notification bar unless pressing "clear all" button or reboot device. r=gwagner, a=fabrice (703630ab451) - Bumping gaia.json for 2 gaia revision(s) a=gaia-bump (de9db1e898f) - Bumping manifests a=b2g-bump (69340dae3c0) - Bumping gaia.json for 1 gaia revision(s) a=gaia-bump (87c72045d65) - Bumping manifests a=b2g-bump (f677c146c43) - Bumping gaia.json for 2 gaia revision(s) a=gaia-bump (6d6e817b4b7) - Bumping manifests a=b2g-bump (9367dc33a30) - Bug 975962 - Rollup patch for b2g28. r=botond, r=tn, a=fabrice (8ca79c60be7) - Bug 981029 - Rollup patch for b2g28. r=botond, a=fabrice (527382bb4ec) - Bug 980826 - Part 1: updateContactFieldType2() doesn't trigger either onsuccess or onerror callback in some case. r=allstars.chh, a=fabrice (11d9d04acd9) - Bug 980826 - Part 2: Add xpcshell tests for updateContactFieldType2() for the case that the recordId in IAP is 0xff. r=allstars.chh, a=fabrice (874d663c654) - Bumping gaia.json for 3 gaia revision(s) a=gaia-bump (333039b2099) - Bumping manifests a=b2g-bump (4f0021766f0) - Bumping gaia.json for 2 gaia revision(s) a=gaia-bump (70731428971) - Bumping manifests a=b2g-bump (0b4c33ffe4f)