dom/system/gonk/ril_worker.js
@@ -13520,6 +13520,10 @@ let ICCContactHelper = {
              (Array.isArray(contact.anr) && contact.anr[0]))) {
           // Case 1.
           this.addContactFieldType2(pbr, contact, field, onsuccess, onerror);
+        } else {
+          if (onsuccess) {
+            onsuccess();
+          }
         }
         return;
       }
